--- a/src/app/core/main/carousel/carousel.component.html
+++ b/src/app/core/main/carousel/carousel.component.html
@@ -1,18 +1,16 @@
 <div class="carousel-container">
-    <div class="carousel-item" *ngIf="carouselItems.length > 0">
-      <img 
-        [src]="carouselItems[currentIndex].image" 
-        [alt]="carouselItems[currentIndex].title"
-        (error)="handleImageError($event)">
-      <h3>{{ carouselItems[currentIndex].title }}</h3>
-    </div>
-  
-    <div class="carousel-controls">
-      <button mat-icon-button (click)="previous()" [disabled]="carouselItems.length <= 1">
-        <mat-icon>chevron_left</mat-icon>
-      </button>
-      <button mat-icon-button (click)="next()" [disabled]="carouselItems.length <= 1">
-        <mat-icon>chevron_right</mat-icon>
-      </button>
+  <div class="carousel-content" [style.transform]="'translateX(' + (-currentIndex * 100) + '%)'">
+    <div class="carousel-slide" *ngFor="let image of images">
+      <img [src]="image" alt="Carousel image">
+      <div class="carousel-text">Your text overlay here</div>
     </div>
   </div>
+  
+  <div class="carousel-indicators">
+    <button mat-icon-button *ngFor="let image of images; let i = index" 
+            [class.active]="i === currentIndex"
+            (click)="setCurrentSlide(i)">
+      <mat-icon>fiber_manual_record</mat-icon>
+    </button>
+  </div>
+</div>
