--- a/src/app/core/main/carousel/carousel.component.css
+++ b/src/app/core/main/carousel/carousel.component.css
@@ -1,7 +1,7 @@
 .carousel-container {
     width: 100%;
-    max-width: 800px;
-    height: 400px;
+    max-width: 1400px;
+    height: 800px;
     position: relative;
     overflow: hidden;
     margin: 0 auto;
@@ -24,20 +24,23 @@ img {
     object-fit: cover;
 }
 
-.carousel-text {
+.fixed-carousel-text {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    font-size: 24px;
+    text-transform: uppercase;
+    font-size: 4em;
+    font-weight: bold;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     z-index: 2;
+    pointer-events: none;
 }
 
 .carousel-indicators {
-    position: absolute;
+    position: sticky;
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
