--- a/src/app/core/main/carousel/carousel.component.html
+++ b/src/app/core/main/carousel/carousel.component.html
@@ -1,8 +1,8 @@
 <div class="carousel-container">
+  <div class="fixed-carousel-text">saldos</div>
   <div class="carousel-content" [style.transform]="'translateX(' + (-currentIndex * 100) + '%)'">
     <div class="carousel-slide" *ngFor="let image of images">
-      <img [src]="image" alt="Carousel image">
-      <div class="carousel-text">Your text overlay here</div>
+      <img [src]="image.image" alt="Carousel image">
     </div>
   </div>
   
