--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <app-header></app-header>
 </header>
 <main>
-  <app-main></app-main>
+  <app-carousel></app-carousel>
+  <app-highlight></app-highlight>
 </main>
 <footer>
   <div>
