--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
   <app-topmenu></app-topmenu>
 </header>
 <main>
-  <app-carousel></app-carousel>
-  <app-highlight></app-highlight>
+  <app-home></app-home>
 </main>
 <footer>
   <app-footer></app-footer>
