--- a/src/app/shared/components/topmenu/topmenu.component.html
+++ b/src/app/shared/components/topmenu/topmenu.component.html
@@ -34,7 +34,7 @@
         <button mat-icon-button aria-label="User Registration">
           <mat-icon>person_add</mat-icon>
         </button>
-        <button mat-icon-button aria-label="Login">
+        <button mat-icon-button aria-label="Login" (click)="openLoginModal()">
           <mat-icon>login</mat-icon>
         </button>
       </div>
