--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,13 @@
     display: grid;
     gap: 30px;
 }
+.app-container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+.page-wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
