--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
-<header>
-  <app-topmenu></app-topmenu>
-</header>
-<main>
-  <app-home></app-home>
-</main>
-<footer>
-  <app-footer></app-footer>
-</footer>
+<div class="app-container">
+  <app-loginmodal></app-loginmodal>
+  <div class="page-wrapper">
+    <header>
+      <app-topmenu></app-topmenu>
+    </header>
+    <main>
+      <app-home></app-home>
+    </main>
+    <footer>
+      <app-footer></app-footer>
+    </footer>
+  </div>
+</div>
