--- a/src/app/shared/components/loginmodal/loginmodal.component.css
+++ b/src/app/shared/components/loginmodal/loginmodal.component.css
@@ -1,33 +1,28 @@
-.modalLogIn {
-    display: none;
+.modal {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.65);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
 }
-.logInForm {
-    display: none;
-    width: 300px;
+.modal-content {
     background-color: white;
     padding: 15px;
+    width: 350px;
+    max-width: 500px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-#email > input, #password > input {
-    width: 230px;
-}
 #closeButton {
-    font-family: Arial, Helvetica, sans-serif;
     position: absolute;
     top: -14px;
     right: -14px;
     background-color: white;
-    line-height: 22px;
-    width: 22px;
+    line-height: 25px;
+    width: 30px;
     text-align: center;
     font-weight: bold;
     border: 3px solid #666;
@@ -35,11 +30,14 @@
     box-shadow: 3px 3px 5px #000;
     user-select: none;
 }
+#email > input, #password > input {
+    width: 240px;
+}
 .validation{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 10px;
+    padding-right: 25px;
 }
 
 #validationButton {
