--- a/src/app/shared/components/loginmodal/loginmodal.component.css
+++ b/src/app/shared/components/loginmodal/loginmodal.component.css
@@ -47,3 +47,9 @@
     border-radius: 5px;
     padding: 5px 10px;
 }
+#emailMessage, #passwordMessage {
+    color: red;
+    font-size: small;
+    margin: 0;
+    padding: 0;
+}
