--- a/src/app/shared/components/topmenu/topmenu.component.html
+++ b/src/app/shared/components/topmenu/topmenu.component.html
@@ -31,12 +31,25 @@
       </nav>
 
       <div class="user-actions">
-        <button mat-icon-button aria-label="User Registration">
-          <mat-icon>person_add</mat-icon>
-        </button>
-        <button mat-icon-button aria-label="Login" (click)="openLoginModal()">
-          <mat-icon>login</mat-icon>
-        </button>
+        <ng-container *ngIf="!(isLoggedIn$ | async)">
+          <button mat-icon-button aria-label="User Registration">
+            <mat-icon>person_add</mat-icon>
+          </button>
+          <button mat-icon-button aria-label="Login" (click)="openLoginModal()">
+            <mat-icon>login</mat-icon>
+          </button>
+        </ng-container>
+        <ng-container *ngIf="isLoggedIn$ | async">
+          <button mat-icon-button aria-label="list_alt">
+            <mat-icon>list_alt</mat-icon>
+          </button>
+          <button mat-icon-button aria-label="User">
+            <mat-icon>person</mat-icon>
+          </button>
+          <button mat-icon-button aria-label="Logout" (click)="logout()">
+            <mat-icon>logout</mat-icon>
+          </button>
+        </ng-container>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
