--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-container">
   <app-loginmodal></app-loginmodal>
+  <app-logoutmodal></app-logoutmodal>
   <div class="page-wrapper">
     <header>
       <app-topmenu></app-topmenu>
