--- a/src/app/shared/components/topmenu/topmenu.component.css
+++ b/src/app/shared/components/topmenu/topmenu.component.css
@@ -33,7 +33,13 @@ div {
 .menu-items {
     display: flex;
     flex-direction: column;
-  }
+}
+#welcomeMessage {
+    margin: 0;
+    padding: 0;
+    font-size: small;
+    align-self: center;
+}
 
 
 
