--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,6 @@
-:host .page-wrapper {
-    display: grid;
+:host {
+    display: flex;
+    flex-direction: column;
     gap: 30px;
-}
-.app-container {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-.page-wrapper {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
 }
