--- a/src/app/shared/components/logoutmodal/logoutmodal.component.css
+++ b/src/app/shared/components/logoutmodal/logoutmodal.component.css
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 10px;
     border-bottom: 1px solid #dee2e6;
 }
 #header h4 {
@@ -58,7 +59,7 @@
 }
 #message {
     font-size: small;
-    padding: 10px 5px 10px 0px;
+    padding: 10px 0px 15px 0px;
     margin: 0;
     border-bottom: 1px solid #dee2e6;
 }
