--- a/src/app/features/product/listproduct/listproduct.component.html
+++ b/src/app/features/product/listproduct/listproduct.component.html
@@ -1,9 +1,15 @@
 <section class="products-container">
-    <h3>Homem</h3>
+    <h2>Homem</h2>
+    <p id="total-results">Total de resultados: {{productsToShow}}</p>
     <div class="products-grid">
-        <div class="product-card" *ngFor="let product of products">
-            <a href=""><img [src]="product.foto_principal" alt="product.nome"></a>
+        <div class="product-card" *ngFor="let product of products.slice(0, productsToShow)">
+            <a href=""><img [src]="imageId === product.id ? product.foto_secundaria : product.foto_principal " alt="product.nome" (mouseenter)="imageId=product.id" (mouseleave)="imageId=null"></a>
+            <mat-icon>stars</mat-icon>
+            <h4>{{product.nome}}</h4>
+            <p>{{product.marca}}</p>
+            <p>{{product.tipo_de_produto}}</p>
+            <h5>{{product.preco}}€</h5>
         </div>
     </div>
-    <button>Ver mais</button>
+    <button *ngIf="hasProduct()" (click)="showProducts()">Ver mais</button>
 </section>
