--- a/src/app/features/product/listproduct/listproduct.component.css
+++ b/src/app/features/product/listproduct/listproduct.component.css
@@ -3,9 +3,21 @@
     grid-template-rows: 1fr;
     justify-items: center;
     align-items: center;
+    text-align: center;
+    padding: 0px;
+    margin: 0px;
 }
-h3 {
+#total-results {
+    justify-self: left;
+}
+h2, h4 {
     font-weight: bold;
+}
+p {
+    margin: 0px;
+}
+#price {
+    font-weight: 3em;
 }
 button {
     background-color: black;
@@ -18,6 +30,7 @@ button {
 .products-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    row-gap: 25px;
 
     @media (max-width: 1024px) {
         grid-template-columns: repeat(2, 1fr);
@@ -26,3 +39,15 @@ button {
         grid-template-columns: 1fr;
     }
 }
+
+.product-card img {
+    width: 80%;
+    padding-bottom: 15px;
+}
+mat-icon {
+    position:absolute;
+}
+mat-icon:hover {
+    color: red;
+}
+
