--- a/src/app/features/product/filterproduct/filterproduct.component.html
+++ b/src/app/features/product/filterproduct/filterproduct.component.html
@@ -1,1 +1,23 @@
-<p>filterproduct works!</p>
+<mat-accordion multi="true">
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Tipo </mat-panel-title>
+      </mat-expansion-panel-header>
+      <ng-container *ngIf="filterItems$ | async as filters">
+        <div *ngFor="let type of filters.type">
+          <mat-checkbox>{{type}}</mat-checkbox>
+        </div>
+      </ng-container>
+    </mat-expansion-panel>
+    <mat-expansion-panel (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
+      <mat-expansion-panel-header>
+        <mat-panel-title> Cor </mat-panel-title>
+      </mat-expansion-panel-header>
+      <ng-container *ngIf="filterItems$ | async as filters">
+        <div *ngFor="let color of filters.color">
+          <mat-checkbox>{{color}}</mat-checkbox>
+        </div>
+      </ng-container>
+    </mat-expansion-panel>
+  </mat-accordion>
+  
