--- a/src/app/features/product/listproduct/listproduct.component.html
+++ b/src/app/features/product/listproduct/listproduct.component.html
@@ -1,15 +1,22 @@
 <section class="products-container">
     <h2>Homem</h2>
-    <p id="total-results">Total de resultados: {{productsToShow}}</p>
+    <p id="total-results">Total de resultados: {{products.length}}</p>
     <div class="products-grid">
-        <div class="product-card" *ngFor="let product of products.slice(0, productsToShow)">
-            <a href=""><img [src]="imageId === product.id ? product.foto_secundaria : product.foto_principal " alt="product.nome" (mouseenter)="imageId=product.id" (mouseleave)="imageId=null"></a>
-            <mat-icon *ngIf="currentUser$ | async" (click)="handleWishList()">stars</mat-icon>
-            <h4>{{product.nome}}</h4>
-            <p>{{product.marca}}</p>
-            <p>{{product.tipo_de_produto}}</p>
-            <h5>{{product.preco}}€</h5>
-        </div>
+      <div class="product-card" *ngFor="let product of products.slice(0, productsToShow)">
+        <a href="">
+          <img 
+            [src]="imageId === product.id ? product.foto_secundaria : product.foto_principal" 
+            [alt]="product.nome"
+            (mouseenter)="imageId=product.id" 
+            (mouseleave)="imageId=null"
+          >
+        </a>
+        <mat-icon *ngIf="currentUser$ | async" (click)="handleWishList()">stars</mat-icon>
+        <h4>{{product.nome}}</h4>
+        <p>{{product.marca}}</p>
+        <p>{{product.tipo_de_produto}}</p>
+        <h5>{{product.preco}}€</h5>
+      </div>
     </div>
     <button id="see-more" *ngIf="hasProduct()" (click)="showProducts()">Ver mais</button>
-</section>
+  </section>
