--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -1,2 +1,2 @@
-<app-filterproduct></app-filterproduct>
+<app-filterproduct (filtersChanged)="onFiltersChanged($event)"></app-filterproduct>
 <app-listproduct></app-listproduct>
