--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -1,2 +1,2 @@
 <app-filterproduct (filtersChanged)="loadFilteredProducts($event)"></app-filterproduct>
-<app-listproduct [products]="products" [currentUser$]="currentUser$"></app-listproduct>
+<app-listproduct [products]="products" [currentUser$]="currentUser$" [starredProducts]="starredProducts" (toggleWishlist)="handleWishList($event)"></app-listproduct>
