--- a/src/app/features/product/productdetail/productdetail.component.html
+++ b/src/app/features/product/productdetail/productdetail.component.html
@@ -1,5 +1,27 @@
-<section class="highlights-container">
-    <div class="products-grid">
-        
+<section>
+    <div class="grid-container">
+        <div class="brand">
+            {{ product.marca }}
+        </div>
+        <div class="name">
+            {{ product.nome }}
+        </div>
+        <div class="images-container">
+            <img src="{{ product.foto_principal }}" alt="foto_principal">
+            <img src="{{ product.foto_secundaria }}" alt="foto_secundaria">
+        </div>
+        <div class="type-collor-container">
+            {{ product.tipo_de_produto }} 
+            {{ product.cor}}
+        </div>
+        <div class="price">
+            {{ product.preco }}€
+        </div>
+        <div>
+            {{ product.descricao }}
+        </div>
+        <button class="cart-btn">
+            Adicionar ao Carrinho
+        </button>
     </div>
 </section>
