--- a/src/app/shared/components/topmenu/topmenu.component.html
+++ b/src/app/shared/components/topmenu/topmenu.component.html
@@ -39,6 +39,9 @@
         <button mat-icon-button aria-label="User">
           <mat-icon>person</mat-icon>
         </button>
+        <button routerLink="/cart" routerLinkActive="activa" mat-icon-button aria-label="shopping_cart">
+          <mat-icon>shopping_cart</mat-icon>
+        </button>
         <button mat-icon-button aria-label="Logout" (click)="openLogoutModal()">
           <mat-icon>logout</mat-icon>
         </button>
