--- a/src/app/shared/components/wishlist/wishlist.component.css
+++ b/src/app/shared/components/wishlist/wishlist.component.css
@@ -27,10 +27,21 @@
     .product-price {
       font-size: 2rem;
     }
-    .remove-btn {
+    .buttons {
+      display: grid;
+      gap: 20px;
+      width: 150px;
+    }
+    .remove-btn, .add-btn {
       background-color: red;
       color: white;
       border: none;
+    }
+    .add-btn p {
+      margin-bottom: 5px;
+    }
+    .cart {
+      width: 20px;
     }
   }
 }
