--- a/src/app/shared/components/topmenu/topmenu.component.html
+++ b/src/app/shared/components/topmenu/topmenu.component.html
@@ -36,7 +36,7 @@
         <button routerLink="/wishlist" routerLinkActive="activa" mat-icon-button aria-label="list_alt">
           <mat-icon>list_alt</mat-icon>
         </button>
-        <button mat-icon-button aria-label="User">
+        <button routerLink="/listuser" routerLinkActive="activa" mat-icon-button aria-label="User">
           <mat-icon>person</mat-icon>
         </button>
         <button routerLink="/cart" routerLinkActive="activa" mat-icon-button aria-label="shopping_cart">
