--- a/src/app/shared/components/registration/registration.component.html
+++ b/src/app/shared/components/registration/registration.component.html
@@ -1,9 +1,6 @@
 <h2>Registo de Utilizador</h2>
 <app-insertuser (newUser)="insertNewUser($event)"></app-insertuser>
+<app-registrationmodal></app-registrationmodal>
+<app-listuser></app-listuser>
 
-<!-- 
-
-<app-searchuser (handleSearchValue)="searchSeries($event)"></app-searchuser>
-<app-listuser [seriesList]="series" (handlerDeleteSerie)="deleteSerie($event)" (handlerShowSerieInfo)="showInfo($event)"></app-listuser>
--->
 
